--- a/web/package.json
+++ b/web/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "@types/react": "16.0.31",
     "@types/react-dom": "16.0.3",
-    "@types/react-redux": "^5.0.14",
+    "@types/react-redux": "5.0.14",
     "@types/redux": "3.6.0",
     "@types/redux-logger": "3.0.5",
+    "express": "^4.16.2",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-logger": "3.0.6"
   },
